additional selector and aligning correct answer

--- a/monitor/css/monitor.scss
+++ b/monitor/css/monitor.scss
@@ -59,6 +59,7 @@
 		transform: translateY(-50%);
 		width : 100%;
 		z-index: 3;
+		vertical-align: middle;
 	}
 	.index {
 		left: 0.5em;
